# soluna-chat

./: .gitignore  README.md
.github/workflows/: client_ci.yml  server_ci.yml
client_kivy/: README.md  buildozer.spec  main.py  requirements.txt
client_kivy/kv/: main.kv
server/: .env.example  README.md  app.py  auth.py  crud.py  db.py  init_db.py  models.py  pyproject.toml  requirements.txt  schemas.py  tests.py
server/tests/: test_auth_chat.py
